--- a/RESTCapstone/app/src/main/res/layout/activity_profile.xml
+++ b/RESTCapstone/app/src/main/res/layout/activity_profile.xml
@@ -4,7 +4,8 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="ca.gbc.mobile.ianpadilla.research_monster.Profile">
+    tools:context="ca.gbc.mobile.ianpadilla.research_monster.Profile"
+    android:background="#ff27ed3d">
 
     <TextView
         android:layout_width="wrap_content"
@@ -12,9 +13,8 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="100834932"
         android:id="@+id/student_id_label"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -23,8 +23,7 @@
         android:text="ian.padilla.b@gmail.com"
         android:id="@+id/email_label"
         android:layout_below="@+id/student_id_label"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_centerHorizontal="true" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -33,8 +32,7 @@
         android:text="Computer Programmer"
         android:id="@+id/summary_label"
         android:layout_below="@+id/email_label"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_centerHorizontal="true" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -43,8 +41,7 @@
         android:text="Ian"
         android:id="@+id/firstName_label"
         android:layout_below="@+id/summary_label"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_centerHorizontal="true" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -53,8 +50,7 @@
         android:text="Padilla"
         android:id="@+id/lastName_label"
         android:layout_below="@+id/firstName_label"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_centerHorizontal="true" />
 
     <Button
         style="?android:attr/buttonStyleSmall"
@@ -62,10 +58,9 @@
         android:layout_height="wrap_content"
         android:text="View All Projects"
         android:id="@+id/viewAll_Button"
-        android:layout_below="@+id/lastName_label"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="46dp" />
+        android:layout_below="@+id/experience_label"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="44dp" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -74,7 +69,18 @@
         android:text="experience"
         android:id="@+id/experience_label"
         android:layout_below="@+id/lastName_label"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_centerHorizontal="true" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageView"
+        android:src="@drawable/ic_launcher"
+        android:layout_above="@+id/student_id_label"
+        android:layout_alignLeft="@+id/viewAll_Button"
+        android:layout_alignStart="@+id/viewAll_Button"
+        android:layout_alignRight="@+id/viewAll_Button"
+        android:layout_alignEnd="@+id/viewAll_Button"
+        android:layout_alignParentTop="true" />
 
 </RelativeLayout>
