--- a/RESTCapstone/app/src/main/res/layout/activity_all_projects.xml
+++ b/RESTCapstone/app/src/main/res/layout/activity_all_projects.xml
@@ -9,6 +9,6 @@
     <ListView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/listView2"
+        android:id="@+id/listProjects"
         android:layout_centerHorizontal="true" />
 </RelativeLayout>
