--- a/RESTCapstone/app/src/main/res/layout/activity_profile.xml
+++ b/RESTCapstone/app/src/main/res/layout/activity_profile.xml
@@ -5,7 +5,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="ca.gbc.mobile.ianpadilla.research_monster.Profile"
-    android:background="#ff27ed3d">
+    android:background="@drawable/Foundation_RGB_400">
 
     <TextView
         android:layout_width="wrap_content"
@@ -14,7 +14,8 @@
         android:text="100834932"
         android:id="@+id/student_id_label"
         android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:textSize="25dp" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -23,7 +24,8 @@
         android:text="ian.padilla.b@gmail.com"
         android:id="@+id/email_label"
         android:layout_below="@+id/student_id_label"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:textSize="25dp" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -32,7 +34,8 @@
         android:text="Computer Programmer"
         android:id="@+id/summary_label"
         android:layout_below="@+id/email_label"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:textSize="25dp" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -41,7 +44,8 @@
         android:text="Ian"
         android:id="@+id/firstName_label"
         android:layout_below="@+id/summary_label"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:textSize="25dp" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -50,17 +54,23 @@
         android:text="Padilla"
         android:id="@+id/lastName_label"
         android:layout_below="@+id/firstName_label"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:textSize="25dp" />
 
     <Button
         style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="View All Projects"
-        android:id="@+id/viewAll_Button"
+        android:id="@+id/btnViewProjects"
         android:layout_below="@+id/experience_label"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="44dp" />
+        android:layout_marginTop="27dp"
+        android:onClick="btnViewProjects"
+        android:background="@drawable/rounded_item"
+        android:layout_alignRight="@+id/email_label"
+        android:layout_alignEnd="@+id/email_label"
+        android:layout_alignLeft="@+id/summary_label"
+        android:layout_alignStart="@+id/summary_label" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -69,7 +79,8 @@
         android:text="experience"
         android:id="@+id/experience_label"
         android:layout_below="@+id/lastName_label"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:textSize="25dp" />
 
     <ImageView
         android:layout_width="wrap_content"
@@ -77,10 +88,10 @@
         android:id="@+id/imageView"
         android:src="@drawable/ic_launcher"
         android:layout_above="@+id/student_id_label"
-        android:layout_alignLeft="@+id/viewAll_Button"
-        android:layout_alignStart="@+id/viewAll_Button"
-        android:layout_alignRight="@+id/viewAll_Button"
-        android:layout_alignEnd="@+id/viewAll_Button"
+        android:layout_alignLeft="@+id/btnViewProjects"
+        android:layout_alignStart="@+id/btnViewProjects"
+        android:layout_alignRight="@+id/btnViewProjects"
+        android:layout_alignEnd="@+id/btnViewProjects"
         android:layout_alignParentTop="true" />
 
 </RelativeLayout>
