--- a/RESTCapstone/app/src/main/res/layout/activity_sign_inapp.xml
+++ b/RESTCapstone/app/src/main/res/layout/activity_sign_inapp.xml
@@ -4,7 +4,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".SignInapp"
-    android:background="#ff27ed3d">
+    android:background="@drawable/Foundation_RGB_400">
 
     <TextView
         android:layout_width="wrap_content"
@@ -12,16 +12,16 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="Research Monster"
         android:id="@+id/RM_label"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="52dp"
         android:textSize="30dp"
         android:textStyle="bold"
         android:textColor="#ff000000"
-        />
+        android:layout_alignParentTop="true"
+        android:layout_alignLeft="@+id/login_button"
+        android:layout_alignStart="@+id/login_button" />
 
     <EditText
-        android:layout_width="fill_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
         android:hint="Enter Student ID"
@@ -29,8 +29,11 @@
         android:id="@+id/student_id"
         android:layout_marginTop="83dp"
         android:layout_below="@+id/RM_label"
-        android:layout_centerHorizontal="true"
-        android:editable="true" />
+        android:editable="true"
+        android:layout_alignRight="@+id/RM_label"
+        android:layout_alignEnd="@+id/RM_label"
+        android:layout_alignLeft="@+id/login_button"
+        android:layout_alignStart="@+id/login_button" />
 
     <EditText
         android:layout_width="fill_parent"
@@ -42,8 +45,10 @@
         android:editable="true"
         android:hint="Enter Password"
         android:layout_centerVertical="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignLeft="@+id/student_id"
+        android:layout_alignStart="@+id/student_id"
+        android:layout_alignRight="@+id/student_id"
+        android:layout_alignEnd="@+id/student_id" />
 
     <Button
         android:layout_width="fill_parent"
@@ -51,12 +56,11 @@
         android:text="Log In"
         android:id="@+id/login_button"
         android:layout_below="@+id/password"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
         android:layout_marginTop="50dp"
         android:textSize="18dp"
-        android:layout_marginLeft="27dp"
-        android:layout_marginRight="27dp" />
+        android:layout_marginRight="27dp"
+        android:background="@drawable/rounded_item"
+        android:layout_marginLeft="55dp" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -66,5 +70,6 @@
         android:layout_marginTop="42dp"
         android:layout_below="@+id/login_button"
         android:layout_centerHorizontal="true"
-        android:textColor="#ffff0200" />
+        android:textColor="#ffff0200"
+        android:layout_marginLeft="40dp" />
 </RelativeLayout>
