--- a/RESTCapstone/app/src/main/res/drawable-hdpi/rounded_item.xml
+++ b/RESTCapstone/app/src/main/res/drawable-hdpi/rounded_item.xml
@@ -3,22 +3,22 @@
     <item android:state_pressed="true" >
         <shape android:shape="rectangle"  >
             <corners android:radius="80dp" />
-            <stroke android:width="1dp" android:color="#5e7974" />
-            <gradient android:angle="-90" android:startColor="#345953" android:endColor="#689a92"  />
+            <stroke android:width="1dp" android:color="#FE642E" />
+            <gradient android:angle="-90" android:startColor="#FE642E" android:endColor="#FE642E"  />
         </shape>
     </item>
     <item android:state_focused="true">
         <shape android:shape="rectangle"  >
             <corners android:radius="80dp" />
-            <stroke android:width="1dp" android:color="#5e7974" />
-            <solid android:color="#58857e"/>
+            <stroke android:width="1dp" android:color="#FE9A2E" />
+            <solid android:color="#FE9A2E"/>
         </shape>
     </item>
     <item >
         <shape android:shape="rectangle"  >
             <corners android:radius="80dp" />
-            <stroke android:width="1dp" android:color="#5e7974" />
-            <gradient android:angle="-90" android:startColor="#8dbab3" android:endColor="#58857e" />
+            <stroke android:width="1dp" android:color="#FF4000" />
+            <gradient android:angle="-90" android:startColor="#FF4000" android:endColor="#FF4000" />
         </shape>
     </item>
 </selector>
