--- a/RESTCapstone/app/src/main/res/layout/activity_profile.xml
+++ b/RESTCapstone/app/src/main/res/layout/activity_profile.xml
@@ -5,93 +5,133 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="ca.gbc.mobile.ianpadilla.research_monster.Profile"
-    android:background="@drawable/Foundation_RGB_400">
+    android:background="@drawable/background"
+    android:nestedScrollingEnabled="false">
 
-    <TextView
+    <ScrollView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="100834932"
-        android:id="@+id/student_id_label"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
-        android:textSize="25dp" />
+        android:id="@+id/scrollView" >
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="ian.padilla.b@gmail.com"
-        android:id="@+id/email_label"
-        android:layout_below="@+id/student_id_label"
-        android:layout_centerHorizontal="true"
-        android:textSize="25dp" />
+    </ScrollView>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Computer Programmer"
-        android:id="@+id/summary_label"
-        android:layout_below="@+id/email_label"
-        android:layout_centerHorizontal="true"
-        android:textSize="25dp" />
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_toEndOf="@+id/scrollView">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Ian"
-        android:id="@+id/firstName_label"
-        android:layout_below="@+id/summary_label"
-        android:layout_centerHorizontal="true"
-        android:textSize="25dp" />
+        <ImageView
+            android:layout_width="325dp"
+            android:layout_height="325dp"
+            android:id="@+id/imageView"
+            android:src="@drawable/ic_launcher"
+            android:layout_alignParentTop="true"
+            android:layout_alignStart="@+id/summary_label"
+            android:layout_centerInParent="true"
+            android:layout_marginTop="25dp"
+            android:layout_gravity="center"
+            android:layout_marginBottom="25dp" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Padilla"
-        android:id="@+id/lastName_label"
-        android:layout_below="@+id/firstName_label"
-        android:layout_centerHorizontal="true"
-        android:textSize="25dp" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="sans-serif-condensed"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="Ian"
+            android:id="@+id/firstName_label"
+            android:layout_below="@+id/summary_label"
+            android:layout_centerHorizontal="true"
+            android:textSize="35dp"
+            android:layout_gravity="center"
+            android:typeface="serif"
+            android:textStyle="bold" />
 
-    <Button
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="View All Projects"
-        android:id="@+id/btnViewProjects"
-        android:layout_below="@+id/experience_label"
-        android:layout_marginTop="27dp"
-        android:onClick="btnViewProjects"
-        android:background="@drawable/rounded_item"
-        android:layout_alignRight="@+id/email_label"
-        android:layout_alignEnd="@+id/email_label"
-        android:layout_alignLeft="@+id/summary_label"
-        android:layout_alignStart="@+id/summary_label" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="sans-serif-condensed"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="Padilla"
+            android:id="@+id/lastName_label"
+            android:layout_below="@+id/firstName_label"
+            android:layout_centerHorizontal="true"
+            android:textSize="35dp"
+            android:layout_gravity="center"
+            android:textStyle="bold" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="experience"
-        android:id="@+id/experience_label"
-        android:layout_below="@+id/lastName_label"
-        android:layout_centerHorizontal="true"
-        android:textSize="25dp" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="sans-serif-condensed"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="100834932"
+            android:id="@+id/student_id_label"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true"
+            android:textSize="30dp"
+            android:layout_gravity="center"
+            android:textStyle="bold" />
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/imageView"
-        android:src="@drawable/ic_launcher"
-        android:layout_above="@+id/student_id_label"
-        android:layout_alignLeft="@+id/btnViewProjects"
-        android:layout_alignStart="@+id/btnViewProjects"
-        android:layout_alignRight="@+id/btnViewProjects"
-        android:layout_alignEnd="@+id/btnViewProjects"
-        android:layout_alignParentTop="true" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="ian.padilla.b@gmail.com"
+            android:fontFamily="sans-serif-condensed"
+            android:id="@+id/email_label"
+            android:layout_below="@+id/student_id_label"
+            android:layout_centerHorizontal="true"
+            android:textSize="30dp"
+            android:layout_gravity="center"
+            android:textStyle="bold" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="Computer Programmer"
+            android:fontFamily="sans-serif-condensed"
+            android:id="@+id/summary_label"
+            android:layout_below="@+id/email_label"
+            android:layout_centerHorizontal="true"
+            android:textSize="28dp"
+            android:layout_gravity="center" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="experience"
+            android:fontFamily="sans-serif-condensed"
+            android:id="@+id/experience_label"
+            android:layout_below="@+id/lastName_label"
+            android:layout_centerHorizontal="true"
+            android:textSize="28dp"
+            android:layout_gravity="center" />
+
+        <Button
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="View All Projects"
+            android:id="@+id/btnViewProjects"
+            android:layout_below="@+id/experience_label"
+            android:layout_marginTop="27dp"
+            android:fontFamily="sans-serif-condensed"
+            android:onClick="onClickToProjects"
+            android:background="@drawable/rounded_item"
+            android:layout_alignRight="@+id/email_label"
+            android:layout_alignEnd="@+id/email_label"
+            android:layout_alignLeft="@+id/summary_label"
+            android:layout_alignStart="@+id/summary_label"
+            android:layout_gravity="center"
+            android:layout_marginLeft="105dp"
+            android:layout_marginRight="90dp"
+            android:textSize="27dp" />
+
+    </LinearLayout>
 
 </RelativeLayout>
