--- a/RESTCapstone/app/src/main/res/layout/activity_sign_inapp.xml
+++ b/RESTCapstone/app/src/main/res/layout/activity_sign_inapp.xml
@@ -4,72 +4,100 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".SignInapp"
-    android:background="@drawable/Foundation_RGB_400">
+    android:background="@drawable/background">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Research Monster"
-        android:id="@+id/RM_label"
-        android:layout_marginTop="52dp"
-        android:textSize="30dp"
-        android:textStyle="bold"
-        android:textColor="#ff000000"
-        android:layout_alignParentTop="true"
-        android:layout_alignLeft="@+id/login_button"
-        android:layout_alignStart="@+id/login_button" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:hint="Enter Student ID"
-        android:ems="10"
-        android:id="@+id/student_id"
-        android:layout_marginTop="83dp"
-        android:layout_below="@+id/RM_label"
-        android:editable="true"
-        android:layout_alignRight="@+id/RM_label"
-        android:layout_alignEnd="@+id/RM_label"
-        android:layout_alignLeft="@+id/login_button"
-        android:layout_alignStart="@+id/login_button" />
-
-    <EditText
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:inputType="textPassword"
-        android:ems="10"
-        android:id="@+id/password"
-        android:password="false"
-        android:editable="true"
-        android:hint="Enter Password"
-        android:layout_centerVertical="true"
-        android:layout_alignLeft="@+id/student_id"
-        android:layout_alignStart="@+id/student_id"
-        android:layout_alignRight="@+id/student_id"
-        android:layout_alignEnd="@+id/student_id" />
+        android:layout_height="fill_parent">
 
-    <Button
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="Log In"
-        android:id="@+id/login_button"
-        android:layout_below="@+id/password"
-        android:layout_marginTop="50dp"
-        android:textSize="18dp"
-        android:layout_marginRight="27dp"
-        android:background="@drawable/rounded_item"
-        android:layout_marginLeft="55dp" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="Research Monster"
+            android:fontFamily="sans-serif-condensed"
+            android:id="@+id/RM_label"
+            android:layout_marginTop="52dp"
+            android:textSize="45dp"
+            android:textStyle="bold"
+            android:textColor="#ff000000"
+            android:layout_alignParentTop="true"
+            android:layout_alignLeft="@+id/login_button"
+            android:layout_alignStart="@+id/login_button"
+            android:layout_gravity="center"
+            android:layout_marginLeft="20dp" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:id="@+id/errorText"
-        android:layout_marginTop="42dp"
-        android:layout_below="@+id/login_button"
-        android:layout_centerHorizontal="true"
-        android:textColor="#ffff0200"
-        android:layout_marginLeft="40dp" />
+        <EditText
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textPersonName"
+            android:fontFamily="sans-serif-condensed"
+            android:hint="Enter Student ID"
+            android:ems="10"
+            android:id="@+id/student_id"
+            android:layout_marginTop="125dp"
+            android:layout_below="@+id/RM_label"
+            android:editable="true"
+            android:layout_alignRight="@+id/RM_label"
+            android:layout_alignEnd="@+id/RM_label"
+            android:layout_alignLeft="@+id/login_button"
+            android:layout_alignStart="@+id/login_button"
+            android:layout_gravity="center"
+            android:layout_marginLeft="77dp"
+            android:layout_marginRight="50dp"
+            android:textSize="25dp"
+            android:textAlignment="center"
+            android:textStyle="bold"
+            android:typeface="serif" />
+
+        <EditText
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textPassword"
+            android:fontFamily="sans-serif-condensed"
+            android:ems="10"
+            android:id="@+id/password"
+            android:password="false"
+            android:editable="true"
+            android:hint="Enter Password"
+            android:layout_centerVertical="true"
+            android:layout_alignLeft="@+id/student_id"
+            android:layout_alignStart="@+id/student_id"
+            android:layout_alignRight="@+id/student_id"
+            android:layout_alignEnd="@+id/student_id"
+            android:layout_gravity="center"
+            android:layout_marginLeft="77dp"
+            android:layout_marginRight="50dp"
+            android:layout_marginTop="125dp"
+            android:textSize="25dp"
+            android:textAlignment="center"
+            android:textStyle="bold"
+            android:typeface="serif" />
+
+        <Button
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="Log In"
+            android:fontFamily="sans-serif-condensed"
+            android:id="@+id/login_button"
+            android:layout_below="@+id/password"
+            android:layout_marginTop="80dp"
+            android:textSize="25dp"
+            android:layout_marginRight="89dp"
+            android:background="@drawable/rounded_item"
+            android:layout_marginLeft="114dp"
+            android:layout_gravity="center" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:id="@+id/errorText"
+            android:layout_marginTop="42dp"
+            android:layout_below="@+id/login_button"
+            android:layout_centerHorizontal="true"
+            android:textColor="#ffff0200"
+            android:layout_gravity="center" />
+    </LinearLayout>
 </RelativeLayout>
