--- a/RESTCapstone/app/src/main/res/layout/activity_all_projects.xml
+++ b/RESTCapstone/app/src/main/res/layout/activity_all_projects.xml
@@ -4,11 +4,37 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="ca.gbc.mobile.ianpadilla.research_monster.AllProjects">
+    tools:context="ca.gbc.mobile.ianpadilla.research_monster.AllProjects"
+    android:background="@drawable/background">
 
-    <ListView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/listProjects"
-        android:layout_centerHorizontal="true" />
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="Projects"
+            android:fontFamily="sans-serif-condensed"
+            android:id="@+id/RM_label"
+            android:layout_marginTop="25dp"
+            android:textSize="45dp"
+            android:textStyle="bold"
+            android:textColor="#ff000000"
+            android:layout_alignParentTop="true"
+            android:layout_gravity="center"
+            android:layout_marginLeft="20dp"
+            android:layout_marginBottom="25dp" />
+
+        <ListView
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/listProjects"
+            android:layout_centerHorizontal="true"
+            android:listSelector="#ff2fc637"
+            android:layout_marginLeft="67dp"
+            />
+    </LinearLayout>
 </RelativeLayout>
